--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title : Wall-E - Samuel Sáez
-description: 'A Modern Jekyll Theme'
+description: 'Elden Ring'
 
 markdown: kramdown
 highlighter: rouge
