--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@ markdown: kramdown
 highlighter: rouge
 logo: false
 paginate: 15
-baseurl: "/Wall-E"
-url: "https://kamplen3.github.io" 
+baseurl: /
 plugins: [jekyll-gist]
 permalink: /:year/:month/:title.html
